--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <TITLE>
-CodeRoad Examples Lib
+Union Examples Lib
 </TITLE>
 <BODY>
 <H4>Examples for your EntityFramework 6.x Windows Presentation Forms App</H4>
@@ -36,6 +36,6 @@ SellDBEntities DB = new SellDBEntities();<br>
             {<br>
 </OL>
 <HR>
-<p align=center> CodeRoad(c) 2019
+<p align=center> Union Libs(c) 2019
 </BODY>
 </HTML>
